--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -25,11 +25,11 @@
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="col-md-5">
-            <div id="pie"></div>
+          <canvas id="pie"></canvas>
         </div>
       </div>
       <div class="col-md-5">
-        <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+        <div id="line"></div>
       </div>
     </div>
     <div class="row">
@@ -45,9 +45,11 @@
 
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="PLOT.JS HTTPS"></script>
-  <script src="APP.JS FILE PATH"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+  <!-- <script type="module" src="./static/js/logic.js"></script> -->
+  <!-- <script type="text/javascript" src="static/js/logic2.js"></script>
+  <script type="text/javascript" src="static/js/logic3.js"></script> -->
+  <script src="./AppProj3.py"></script>
 
 </body>
 
