--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -46,10 +46,10 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-  <!-- <script type="module" src="./static/js/logic.js"></script> -->
+  <!-- <script type="text/javascript" src="./static/js/logic.js"></script> -->
   <!-- <script type="text/javascript" src="static/js/logic2.js"></script>
   <script type="text/javascript" src="static/js/logic3.js"></script> -->
-  <script src="./AppProj3.py"></script>
+  <script src="./AppProj3_new.py"></script>
 
 </body>
 
