--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -7,6 +7,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mortality from Chronic Diseases in the US</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+      <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin="" />
+
+  <!-- Leaflet JavaScript code -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
 <body>
@@ -43,13 +60,12 @@
     </div>
   </div>
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+   <!-- JavaScript files -->
   <!-- <script type="text/javascript" src="./static/js/logic.js"></script> -->
   <!-- <script type="text/javascript" src="static/js/logic2.js"></script>
   <script type="text/javascript" src="static/js/logic3.js"></script> -->
-  <script src="./AppProj3_new.py"></script>
+  <script type="text/javascript" src="../static/js/logic4.js"></script>
+
 
 </body>
 
